Fix alignment issue in createdGroups module

--- a/src/styles/_Box.module.scss
+++ b/src/styles/_Box.module.scss
@@ -69,7 +69,6 @@
   }
   &:disabled {
     color: #000000;
-    background: #b9b9b9;
   }
 }
 
