--- a/src/styles/createdGroups.module.scss
+++ b/src/styles/createdGroups.module.scss
@@ -18,6 +18,7 @@
       align-items: center;
       margin: 0 auto;
       font-size: 1.2rem;
+      align-items: flex-start;
 
       li {
         overflow: hidden;
